--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,7 @@ body {
 .list {
   list-style: none;
 }
-img,
-svg {
+img {
   display: block;
   max-width: 100%;
   height: 100%;
@@ -408,6 +407,7 @@ ul {
   fill: currentColor;
 }
 /* -- Section-5 -- */
+
 /* Footer */
 .footbox {
   background-color: var(--dark-navyblue-color);
@@ -435,6 +435,7 @@ ul {
   display: inline-block;
 }
 .footer-social-box {
+  margin-right: 80px;
 }
 .footer-social-text {
   color: var(--whait-color);
@@ -466,7 +467,59 @@ ul {
 .foot-social-links:focus {
   background-color: var(--success-green-color);
 }
+.form-footer {
+}
+.foot-input-box {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.footform-txt {
+  color: var(--whait-color);
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+
+.form-footer-input {
+  background: var(--dark-navyblue-color);
+  width: 264px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid var(--whait-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.form-footer-input::placeholder {
+  color: var(--whait-color);
+  font-size: 12px;
+  line-height: 2; /* 200% */
+  letter-spacing: 0.48px;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.footform-btn {
+  display: inline-flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background-color: var(--primarybrand-iris-color);
+
+  color: var(--whait-color);
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.64px;
+}
+.footform-btn-icon {
+  fill: none;
+}
 /* --Footer-- */
+
 /* Modal-window */
 .backdrop {
   background-color: var(--modaloverlay-navybluemodal-color);
@@ -503,6 +556,7 @@ ul {
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   width: 408px;
   min-height: 584px;
+  padding: 72px 24px 24px;
 }
 .modal-btn {
   position: absolute;
@@ -664,7 +718,6 @@ ul {
   line-height: 1.2;
   /* identical to box height, or 120% */
   letter-spacing: 0.02em;
-
   margin-bottom: 8px;
 }
 .card-text {
@@ -673,4 +726,140 @@ ul {
   line-height: 1.5;
   /* identical to box height, or 150% */
   letter-spacing: 0.02em;
+}
+
+/* form input */
+
+input,
+textarea,
+button {
+  font-family: inherit;
+  line-height: inherit;
+}
+textarea {
+  resize: none;
+}
+
+.form-txt {
+  color: var(--dark-navyblue-color);
+  text-align: center;
+  margin-bottom: 16px;
+  /* Body Medium */
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+}
+
+.form-button {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--subtletext-lightlate-color);
+  display: block;
+  margin-bottom: 4px;
+}
+.form-element {
+  margin-bottom: 8px;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid var(--modaloverlay-navybluemodal-color);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--modaloverlay-navybluemodal-color);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.form-textarea {
+  margin-bottom: 16px;
+}
+.form-textarea-input {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--modaloverlay-navybluemodal-color);
+  border: 1px solid var(--modaloverlay-navybluemodal-color);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-checkbox {
+  margin-bottom: 24px;
+}
+.form-element label {
+}
+.input-wrap {
+  position: relative;
+}
+.checkbox-icon {
+  display: inline-flex;
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--modaloverlay-navybluemodal-color);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  margin-right: 8px;
+}
+
+input[type='checkbox']:checked + label .checkbox-icon {
+  background-color: var(--pressed-state-ocean-color);
+  border: none;
+  fill: var(--light-cloud-color);
+}
+.form-element svg {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.form-textarea-input:focus {
+  border-color: var(--primarybrand-iris-color);
+}
+.form-element input:focus {
+  border-radius: 4px;
+  border: 1px solid var(--primarybrand-iris-color);
+}
+.form-element input:focus + svg {
+  fill: var(--primarybrand-iris-color);
+}
+.form-element input:focus::placeholder {
+  color: var(--);
+}
+
+.policy-txt {
+  color: var(--subtletext-lightlate-color);
+
+  /* Small Text */
+  font-size: 12px;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.04em;
+}
+.policy {
+  color: var(--primarybrand-iris-color);
+
+  /* Link Text */
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
 }
