--- a/css/styles.css
+++ b/css/styles.css
@@ -468,44 +468,46 @@ ul {
   background-color: var(--success-green-color);
 }
 .form-footer {
-}
-.foot-input-box {
   display: flex;
-  align-items: center;
   gap: 24px;
 }
+
 .footform-txt {
   color: var(--whait-color);
   font-weight: 500;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
 
 .form-footer-input {
-  background: var(--dark-navyblue-color);
+  background-color: transparent;
   width: 264px;
   height: 40px;
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid var(--whait-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04 em;
+  padding-left: 16px;
+  color: var(--whait-color);
 }
 .form-footer-input::placeholder {
   color: var(--whait-color);
-  font-size: 12px;
-  line-height: 2; /* 200% */
-  letter-spacing: 0.48px;
+
   padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
 }
 .footform-btn {
-  display: inline-flex;
+  display: flex;
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
   gap: 16px;
+  border: none;
   border-radius: 4px;
   background-color: var(--primarybrand-iris-color);
 
@@ -513,9 +515,10 @@ ul {
   text-align: center;
   font-weight: 500;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.64px;
+  letter-spacing: 0.04 em;
 }
 .footform-btn-icon {
+  margin-left: 16px;
   fill: none;
 }
 /* --Footer-- */
@@ -683,10 +686,6 @@ ul {
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
   background-color: var(--primarybrand-iris-color);
@@ -716,19 +715,16 @@ ul {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  /* identical to box height, or 120% */
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
 .card-text {
-  /* App */
   color: var(--text-slate-color);
   line-height: 1.5;
-  /* identical to box height, or 150% */
   letter-spacing: 0.02em;
 }
 
-/* form input */
+/* Form input */
 
 input,
 textarea,
@@ -739,17 +735,18 @@ button {
 textarea {
   resize: none;
 }
-
 .form-txt {
   color: var(--dark-navyblue-color);
   text-align: center;
   margin-bottom: 16px;
-  /* Body Medium */
   font-weight: 500;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02 em;
 }
-
+.form-input-svg {
+  left: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .form-button {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
@@ -797,6 +794,7 @@ textarea {
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/* Checkbox */
 .form-checkbox {
   margin-bottom: 24px;
 }
@@ -847,6 +845,7 @@ input[type='checkbox']:checked + label .checkbox-icon {
 }
 
 .policy-txt {
+  display: block;
   color: var(--subtletext-lightlate-color);
 
   /* Small Text */
