--- a/css/styles.css
+++ b/css/styles.css
@@ -490,7 +490,7 @@ ul {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   font-size: 12px;
   line-height: 1.5;
-  letter-spacing: 0.04 em;
+  letter-spacing: 0.04em;
   padding-left: 16px;
   color: var(--whait-color);
 }
@@ -502,6 +502,7 @@ ul {
   padding-bottom: 8px;
 }
 .footform-btn {
+  min-width: 165px;
   display: flex;
   padding: 8px 24px;
   justify-content: center;
@@ -515,7 +516,7 @@ ul {
   text-align: center;
   font-weight: 500;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.04 em;
+  letter-spacing: 0.04em;
 }
 .footform-btn-icon {
   margin-left: 16px;
@@ -724,7 +725,7 @@ ul {
   letter-spacing: 0.02em;
 }
 
-/* Form input */
+/* Form modal */
 
 input,
 textarea,
@@ -741,10 +742,9 @@ textarea {
   margin-bottom: 16px;
   font-weight: 500;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.02 em;
+  letter-spacing: 0.02em;
 }
 .form-input-svg {
-  left: 16px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-button {
@@ -776,9 +776,7 @@ textarea {
   line-height: 1.17;
   letter-spacing: 0.04em;
 }
-.form-textarea {
-  margin-bottom: 16px;
-}
+
 .form-textarea-input {
   width: 100%;
   height: 120px;
@@ -824,6 +822,7 @@ input[type='checkbox']:checked + label .checkbox-icon {
   fill: var(--light-cloud-color);
 }
 .form-element svg {
+  left: 16px;
   position: absolute;
   top: 50%;
   left: 12px;
@@ -839,9 +838,6 @@ input[type='checkbox']:checked + label .checkbox-icon {
 }
 .form-element input:focus + svg {
   fill: var(--primarybrand-iris-color);
-}
-.form-element input:focus::placeholder {
-  color: var(--);
 }
 
 .policy-txt {
